--- a/Lorensjon/res/layout/menu.xml
+++ b/Lorensjon/res/layout/menu.xml
@@ -10,35 +10,59 @@
         style="@style/ActionBar"
         app:title="Seb" />
 
-    <net.bevster.lorensjon.google.DashboardLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@color/background" >
+        android:layout_height="match_parent" >
 
-        <Button
-            android:id="@+id/btn_nyheter"
-            style="@style/DashboardButton"
-            android:drawableTop="@drawable/nyheter"
-            android:text="@string/dash_nyheter" />
+        <net.bevster.lorensjon.google.DashboardLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:background="@color/background" >
 
-        <Button
-            android:id="@+id/btn_ukeplan"
-            style="@style/DashboardButton"
-            android:drawableTop="@drawable/ukeplan"
-            android:text="@string/dash_ukeplan" />
+            <Button
+                android:id="@+id/btn_nyheter"
+                style="@style/DashboardButton"
+                android:drawableTop="@drawable/nyheter"
+                android:text="@string/dash_nyheter" />
 
-        <Button
-            android:id="@+id/btn_om"
-            style="@style/DashboardButton"
-            android:drawableTop="@drawable/om"
-            android:text="@string/dash_om" />
+            <Button
+                android:id="@+id/btn_ukeplan"
+                style="@style/DashboardButton"
+                android:drawableTop="@drawable/ukeplan"
+                android:text="@string/dash_ukeplan" />
 
-        <Button
-            android:id="@+id/btn_instillinger"
-            style="@style/DashboardButton"
-            android:drawableTop="@drawable/instillinger"
-            android:text="@string/dash_instillinger" />
-    </net.bevster.lorensjon.google.DashboardLayout>
+            <Button
+                android:id="@+id/btn_om"
+                style="@style/DashboardButton"
+                android:drawableTop="@drawable/om"
+                android:text="@string/dash_om" />
+
+            <Button
+                android:id="@+id/btn_instillinger"
+                style="@style/DashboardButton"
+                android:drawableTop="@drawable/instillinger"
+                android:text="@string/dash_instillinger" />
+        </net.bevster.lorensjon.google.DashboardLayout>
+
+        <View
+            android:id="@+id/view1"
+            android:layout_width="fill_parent"
+            android:layout_height="58dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/actionbar_background_end" >
+        </View>
+
+        <TextView
+            android:id="@+id/txt_melding"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="19dp"
+            android:text="Ingen meldinger"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </RelativeLayout>
 
 </LinearLayout>
