--- a/Lorensjon/res/layout/content_instillinger_profil.xml
+++ b/Lorensjon/res/layout/content_instillinger_profil.xml
@@ -67,7 +67,9 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_default_small"
             android:text=" * Klasse" />
+
     </LinearLayout>
 
 </LinearLayout>
