--- a/Lorensjon/res/layout/content_instillinger_status.xml
+++ b/Lorensjon/res/layout/content_instillinger_status.xml
@@ -36,6 +36,14 @@
             android:layout_below="@+id/info_student"
             android:layout_marginTop="16dp"
             android:text="@string/app_name" />
+
+        <CheckBox
+            android:id="@+id/chk_motd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btn_lagre"
+            android:layout_centerHorizontal="true"
+            android:text="Velkomstmelding" />
     </RelativeLayout>
 
 </LinearLayout>
