--- a/Lorensjon/res/layout/content_instillinger_profil.xml
+++ b/Lorensjon/res/layout/content_instillinger_profil.xml
@@ -26,17 +26,38 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
+        <TextView
+            android:id="@+id/textView21"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Skole"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <Spinner
             android:id="@+id/Spinner_skole"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:prompt="@string/chk_skole" />
 
+        <TextView
+            android:id="@+id/textView31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Student"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <Spinner
             android:id="@+id/spinner_student"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:prompt="@string/chk_student" />
+
+        <TextView
+            android:id="@+id/textView342"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Klasse"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
             android:id="@+id/spinner_klasse"
@@ -45,11 +66,24 @@
             android:prompt="@string/chk_klasse" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sinker lastehatigheten" />
+
     <CheckBox
         android:id="@+id/checkBox_profil_nett"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Laste fra nett" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Oppdater"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,7 +103,6 @@
             android:layout_height="wrap_content"
             android:background="@android:drawable/btn_default_small"
             android:text=" * Klasse" />
-
     </LinearLayout>
 
 </LinearLayout>
