--- a/Lorensjon/res/layout/content_instillinger_ukeplan.xml
+++ b/Lorensjon/res/layout/content_instillinger_ukeplan.xml
@@ -19,6 +19,16 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="22dp"
             android:text="@string/app_name" />
+
+        <TextView
+            android:id="@+id/text_ukedag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:text="Velg uke"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
     </RelativeLayout>
 
     <SeekBar
@@ -26,6 +36,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="52" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Velg oppløsning"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Spinner
         android:id="@+id/spinner_modus"
