--- a/Lorensjon/res/layout/menu.xml
+++ b/Lorensjon/res/layout/menu.xml
@@ -23,7 +23,7 @@
             <Button
                 android:id="@+id/btn_nyheter"
                 style="@style/DashboardButton"
-                android:drawableTop="@drawable/nyheter"
+                android:drawableTop="@drawable/nyheter_util"
                 android:text="@string/dash_nyheter" />
 
             <Button
