--- a/Lorensjon/res/layout/content_instillinger_profil.xml
+++ b/Lorensjon/res/layout/content_instillinger_profil.xml
@@ -27,82 +27,74 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView21"
+            android:id="@+id/TextView01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Skole"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
-            android:id="@+id/Spinner_skole"
+            android:id="@+id/loren_spinner_skole"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/chk_skole" />
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/textView31"
+            android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Student"
+            android:text="Søk"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <Spinner
-            android:id="@+id/spinner_student"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/chk_student" />
-
-        <TextView
-            android:id="@+id/textView342"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Klasse"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <Spinner
-            android:id="@+id/spinner_klasse"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/chk_klasse" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/loren_sok_tekst"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sinker lastehatigheten" />
+        android:ems="10" >
 
-    <CheckBox
-        android:id="@+id/checkBox_profil_nett"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Laste fra nett" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Oppdater"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        <requestFocus />
+    </EditText>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/btn_ref_skole"
-            style="?android:attr/buttonStyleSmall"
+        <RadioGroup
+            android:id="@+id/loren_radio_sok"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" * Skole" />
+            android:layout_height="wrap_content" >
+
+            <RadioButton
+                android:id="@+id/loren_radio_sok_navn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Navn" />
+
+            <RadioButton
+                android:id="@+id/loren_radio_sok_klasse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Klasse" />
+
+            <RadioButton
+                android:id="@+id/loren_radio_sok_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID" />
+        </RadioGroup>
 
         <Button
-            android:id="@+id/btn_ref_klasse"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_default_small"
-            android:text=" * Klasse" />
+            android:id="@+id/loren_knapp_sok"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Søk" />
+
     </LinearLayout>
+
+    <Spinner
+        android:id="@+id/loren_spinner_navn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
