--- a/Lorensjon/res/layout/content_instillinger_ukeplan.xml
+++ b/Lorensjon/res/layout/content_instillinger_ukeplan.xml
@@ -50,4 +50,23 @@
         android:layout_height="wrap_content"
         android:prompt="@string/chk_ukemodus" />
 
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fiks for enkelte skoler!"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <CheckBox
+        android:id="@+id/loren_check_ukefiks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fiks" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sjekk denne kun om planen laster en gul side! Om det ikke eksisterer et slikt problem kan problemer føre med ved sjekking!" />
+
 </LinearLayout>
