--- a/Lorensjon/res/layout/content_om_kreditt.xml
+++ b/Lorensjon/res/layout/content_om_kreditt.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/net.bevster.lorensjon"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/txt_kreditt"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="Feseest"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:id="@+id/om_tekst_om_tittel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Takk til følgene!"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-</ScrollView>
+    <TextView
+        android:id="@+id/om_tekst_kreditt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:maxLines="75"
+        android:scrollbars="vertical"
+        android:text="" />
+
+</LinearLayout>
