--- a/Lorensjon/res/layout/content_om_om.xml
+++ b/Lorensjon/res/layout/content_om_om.xml
@@ -6,9 +6,33 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/om_tekst_om_tittel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="App under utvikling ;)" />
+        android:layout_gravity="center"
+        android:text="God aften!"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/om_tekst_om"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:maxLines="75"
+        android:scrollbars="vertical"
+        android:text="" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="(c)Bevster 2012" />
+    </RelativeLayout>
 
 </LinearLayout>
