--- a/Lorensjon/res/layout/content_ukeplan.xml
+++ b/Lorensjon/res/layout/content_ukeplan.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-
-    <ImageView
+
+    <net.bevster.lorensjon.gfx.TouchImageView
         android:id="@+id/ukeplanbilde"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/aks_blu" />
+        android:src="@drawable/akershus_logo_96" />
 
 </LinearLayout>
