--- a/Lorensjon/res/layout/content_instillinger_status.xml
+++ b/Lorensjon/res/layout/content_instillinger_status.xml
@@ -19,24 +19,6 @@
             android:layout_centerHorizontal="true"
             android:text="@string/knapp_lagre" />
 
-        <TextView
-            android:id="@+id/info_student"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:text="@string/app_name" />
-
-        <TextView
-            android:id="@+id/info_skole"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/info_student"
-            android:layout_below="@+id/info_student"
-            android:layout_marginTop="16dp"
-            android:text="@string/app_name" />
-
         <CheckBox
             android:id="@+id/chk_motd"
             android:layout_width="wrap_content"
@@ -44,6 +26,144 @@
             android:layout_above="@+id/btn_lagre"
             android:layout_centerHorizontal="true"
             android:text="Velkomstmelding" />
+
+        <View
+            android:id="@+id/view1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/chk_motd"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/actionbar_background_end" />
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/chk_motd"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="25dp"
+            android:background="@color/background" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignLeft="@+id/view2"
+            android:layout_alignTop="@+id/view2"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/user" />
+
+        <ImageView
+            android:id="@+id/ImageView01"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignLeft="@+id/view2"
+            android:layout_below="@+id/imageView1"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/group" />
+
+        <ImageView
+            android:id="@+id/ImageView02"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignLeft="@+id/view2"
+            android:layout_below="@+id/ImageView01"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/script_code" />
+
+        <ImageView
+            android:id="@+id/ImageView03"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignLeft="@+id/view2"
+            android:layout_below="@+id/ImageView02"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/house" />
+
+        <ImageView
+            android:id="@+id/ImageView04"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignLeft="@+id/view2"
+            android:layout_below="@+id/ImageView03"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/drink" />
+
+        <ImageView
+            android:id="@+id/ImageView05"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignLeft="@+id/view2"
+            android:layout_below="@+id/ImageView04"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/script_code" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_alignTop="@+id/imageView1"
+            android:layout_marginLeft="20dp"
+            android:text="Navn" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/ImageView01"
+            android:layout_alignTop="@+id/ImageView01"
+            android:layout_marginLeft="20dp"
+            android:text="Klasse" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/ImageView02"
+            android:layout_alignTop="@+id/ImageView02"
+            android:layout_marginLeft="20dp"
+            android:text="StudentID" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/ImageView03"
+            android:layout_alignTop="@+id/ImageView03"
+            android:layout_marginLeft="20dp"
+            android:text="Skole" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/ImageView04"
+            android:layout_alignTop="@+id/ImageView04"
+            android:layout_marginLeft="20dp"
+            android:text="Uke" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/ImageView05"
+            android:layout_alignTop="@+id/ImageView05"
+            android:layout_marginLeft="20dp"
+            android:text="SkoleID" />
     </RelativeLayout>
 
 </LinearLayout>
