--- a/Lorensjon/res/layout/content_om_om.xml
+++ b/Lorensjon/res/layout/content_om_om.xml
@@ -13,14 +13,20 @@
         android:text="God aften!"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView
-        android:id="@+id/om_tekst_om"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:maxLines="75"
-        android:scrollbars="vertical"
-        android:text="" />
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/om_tekst_om"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:maxLines="75"
+            android:scrollbars="vertical"
+            android:text="" />
+    </ScrollView>
 
     <RelativeLayout
         android:layout_width="wrap_content"
