--- a/Lorensjon/res/layout/content_instillinger_profil.xml
+++ b/Lorensjon/res/layout/content_instillinger_profil.xml
@@ -5,22 +5,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/rel_lay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background" >
-
-        <TextView
-            android:id="@+id/info_student"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="22dp"
-            android:text="@string/app_name" />
-    </RelativeLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,7 +35,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:inputType="textPersonName"
         android:maxLines="1" >
+
+        <requestFocus />
     </EditText>
 
     <LinearLayout
