--- a/Lorensjon/res/layout/content_om_kreditt.xml
+++ b/Lorensjon/res/layout/content_om_kreditt.xml
@@ -15,17 +15,30 @@
 
     <ScrollView
         android:id="@+id/scrollView1"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
         <TextView
             android:id="@+id/om_tekst_kreditt"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:maxLines="75"
             android:scrollbars="vertical"
             android:text="" />
     </ScrollView>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="(c)Bevster 2012" />
+    </RelativeLayout>
 
 </LinearLayout>
