--- a/Lorensjon/res/layout/content_om_om.xml
+++ b/Lorensjon/res/layout/content_om_om.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:id="@+id/om_tekst_om"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:maxLines="75"
@@ -34,7 +34,7 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
