--- a/Lorensjon/res/layout/om.xml
+++ b/Lorensjon/res/layout/om.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/net.bevster.lorensjon"
+    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/background"
@@ -30,12 +31,12 @@
             app:footerColor="#1874CD"
             app:footerLineHeight="2dp"
             app:footerTriangleHeight="10dp"
+            app:selectedBold="true"
             app:selectedColor="#1874CD"
             app:selectedSize="21dp"
             app:textColor="#1874CD"
             app:textSize="21dp"
-            app:titlePadding="10dp"
-            app:selectedBold="true" >
+            app:titlePadding="10dp" >
         </org.taptwo.android.widget.TitleFlowIndicator>
     </LinearLayout>
 
