--- a/Lorensjon/res/layout/content_instillinger_profil.xml
+++ b/Lorensjon/res/layout/content_instillinger_profil.xml
@@ -74,6 +74,7 @@
             android:id="@+id/loren_knapp_sok"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            style="@style/ButtonText_big"
             android:text="Søk" />
     </LinearLayout>
 
