--- a/Lorensjon/res/layout/content_instillinger_status.xml
+++ b/Lorensjon/res/layout/content_instillinger_status.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            style="@style/ButtonText_big"
             android:text="@string/knapp_lagre" />
 
         <CheckBox
