--- a/Lorensjon/res/layout/content_om_kreditt.xml
+++ b/Lorensjon/res/layout/content_om_kreditt.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="(c)Bevster 2012" />
+            android:text="(c)Bevster 2012-2013" />
     </RelativeLayout>
 
 </LinearLayout>
