--- a/Lorensjon/res/layout/content_om_om.xml
+++ b/Lorensjon/res/layout/content_om_om.xml
@@ -30,7 +30,8 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="bottom" >
 
         <TextView
             android:id="@+id/textView2"
@@ -38,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="(c)Bevster 2012" />
+            android:text="(c)Bevster 2012-2013" />
     </RelativeLayout>
 
 </LinearLayout>
